--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,30 +1,10 @@
-/* .App {
-  text-align: center;
+.App {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.cardWrap {
+  display: grid;
+  grid-template-columns: 10% 1fr 10%;
 }
-
-.form input {
-  width: 300px;
-  height: 60px;
-  margin: 10px;
-  font-size: 25px;
-}
-
-.card {
-  width: 500px;
-  height: 170px;
-  border: 2px solid black;
-  border-radius: 15px;
-  margin: 10px;
-}
-
-#updateInput {
-  width: 100px;
-  height: 20px;
-} */
