--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,23 @@
-.App {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+html {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: #F2F6FC;
 }
 
 .cardWrap {
-  display: grid;
-  grid-template-columns: 10% 1fr 10%;
+    display: grid;
+    grid-template-columns: 5% 1fr 5%;
+}
+
+.grid-card {
+    display: grid;
+    grid-column: 2/3;
+}
+
+.flex-card {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
