--- a/client/src/components/Category.css
+++ b/client/src/components/Category.css
@@ -13,6 +13,21 @@
     font-weight: 600;
     margin-right: 3rem;
     cursor: pointer;
+    animation: fade-color;
+}
+
+.categories li:hover {
+    color: #FA8F2C;
+    transition: 0.3s ease-out;
+}
+
+@keyframes fade-color {
+    0% {
+        color: rgba(0, 0, 0, 0.8);
+    }
+    100% {
+        color: #FA8F2C;
+    }
 }
 
 .categories li:last-child {
