--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -31,6 +31,8 @@
 
 .desc {
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .desc p {
@@ -53,4 +55,20 @@
     padding: 1px 5px;
     list-style: none;
 
+}
+
+.no_og {
+    max-width: 260px;
+    height: 157px;
+    background-color: #f8ceec;
+    background-image: linear-gradient(315deg, #f8e1f1 0%, #d1c1f8 74%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.no_og > a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
 }
