--- a/client/src/components/Category.css
+++ b/client/src/components/Category.css
@@ -5,11 +5,11 @@
     align-items: center;
     justify-content: center;
     list-style: none;
-    margin: 30px;
+    margin: 30px 20px;
 }
 
 .categories li {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 600;
     margin-right: 3rem;
     cursor: pointer;
