--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,12 +5,12 @@ html {
     background: #F2F6FC;
 }
 
-.cardWrap {
+.cardWrap, .catWrap {
     display: grid;
     grid-template-columns: 5% 1fr 5%;
 }
 
-.grid-card {
+.grid-card, .catInnerGrid {
     display: grid;
     grid-column: 2/3;
 }
