--- a/client/src/components/Category.css
+++ b/client/src/components/Category.css
@@ -1,9 +1,10 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
 
 .categories {
+    grid-column: 2/3;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     list-style: none;
     margin: 30px 20px;
 }
