반응형 푸터 완성

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,6 @@ html {
 .flex-card {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
