--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -4,7 +4,9 @@
     font-weight: normal;
     font-style: normal;
 }
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 .footer-wrap {
+    font-family: 'Noto Sans KR', sans-serif;
     background-color: #292A2D;
     width: 100%;
     height: 100%;
