--- a/client/src/components/RecSubmitPage.css
+++ b/client/src/components/RecSubmitPage.css
@@ -24,6 +24,7 @@ button {
     height: 100%;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.3);
+    z-index: 3;
 }
 
 .submit-wrap {
@@ -92,6 +93,10 @@ button {
     margin-top: 10px;
     padding: 10px;
     background-color: #ffffff;
+}
+
+.isClosed {
+    display: none;
 }
 
 /* .close {
