--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+/* dark-mode */
+/* #1F1F26 bgc
+#252531 card bgc
+#FDFDFD font */
 html {
     margin: 0;
     padding: 0;
@@ -25,4 +29,12 @@ html {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
+}
+
+/* dark-mode */
+
+@media (prefers-color-scheme: dark) {
+    html {
+        background: #232732;
+    }
 }
