--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -60,3 +60,10 @@ nav {
     border-bottom: 15px solid #fff;
     z-index: 1;
 }
+
+/* dark-mode */
+@media (prefers-color-scheme: dark) {
+    nav {
+        background: #685aa38e;
+    }
+}
