feature: 동적 스타일링을 위한 styled components 도입. 임시로 bg만 다크모드 변하게 함

--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -111,7 +111,7 @@
 
 /* dark-mode */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
 
     .infoCard {
         background: #2E333D;
@@ -126,4 +126,4 @@
     .desc p {
         color: #fdfdfde3
     }
-}
+} */
