--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,12 +2,12 @@
 /* #1F1F26 bgc
 #252531 card bgc
 #FDFDFD font */
-html {
+/* html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     background: #F2F6FC;
-}
+} */
 
 .cardWrap {
     display: grid;
@@ -33,8 +33,8 @@ html {
 
 /* dark-mode */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     html {
         background: #232732;
     }
-}
+} */
