feature: RecSubmitPage 컴포넌트 다크모드 적용

--- a/client/src/components/RecSubmitPage.css
+++ b/client/src/components/RecSubmitPage.css
@@ -92,7 +92,7 @@ button {
 .close > button {
     margin-top: 10px;
     padding: 10px;
-    background-color: #ffffff;
+    background-color: transparent;
 }
 
 .isClosed {
