feature: useTheme 커스텀 훅 추가. 로컬스토리지에 사용자가 설정한 모드 저장. 초기에는 window 모드로 설정됨

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,14 +14,22 @@
     grid-template-columns: 5% 1fr 5%;
 }
 
+
+.grid-card {
+    display: grid;
+    grid-column: 2/3;
+}
 .catWrap {
     display: grid;
     grid-template-columns: 10% 1fr 10%;
 }
-
-.grid-card, .catInnerGrid {
+.catInnerGrid {
     display: grid;
     grid-column: 2/3;
+}
+.catInnerFlex {
+    display: flex;
+    justify-content: space-between;
 }
 
 .flex-card {
