--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,15 @@
     box-sizing: border-box;
     background: #F2F6FC;
 } */
+html {
+    background-color: #292A2D;
+}
+
+body {
+    background-color: rgb(255, 158, 158);
+    width: 100%;
+    height: 100%;
+}
 
 .cardWrap {
     display: grid;
