--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -14,6 +14,7 @@
     background-color: #fff;
     max-width: 300px;
     min-width: 250px;
+    min-height: 400px;
     flex: 1 1 40%;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     animation: toTop, fadeIn;
